NotificationChart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
        - name: notification-service

          image: "mousama/notification-service:latest"

          ports:
          - name: http
            containerPort: 8855
