NotificationChart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP

  selector:
    app: notification-service

  ports:
    - port: 8855
      targetPort: 8855
